<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Calcul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:gravity="end" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="36sp" />
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eightBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nineBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/nine" />

            <Button
                android:id="@+id/plusBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/plus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/four" />

            <Button
                android:id="@+id/fiveBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/five" />

            <Button
                android:id="@+id/sixBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/six" />

            <Button
                android:id="@+id/minorBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/minor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/one" />

            <Button
                android:id="@+id/twoBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/two" />

            <Button
                android:id="@+id/threeBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/three" />

            <Button
                android:id="@+id/mutiBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/muti" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/delBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="delClick"
                android:text="@string/Delete" />

            <Button
                android:id="@+id/zeroBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/zero" />

            <Button
                android:id="@+id/equlBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="equlClick"
                android:text="@string/equl" />

            <Button
                android:id="@+id/divideBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="ClickFunc"
                android:text="@string/devide" />
        </TableRow>
    </TableLayout>


</LinearLayout>